After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760472 - GtkStyleContext warnings
GtkStyleContext warnings
Status: RESOLVED FIXED
Product: libwnck
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libwnck maintainers
libwnck maintainers
Depends on:
Blocks:
 
 
Reported: 2016-01-11 15:40 UTC by Alberts Muktupāvels
Modified: 2016-01-13 15:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pager: use correct state flags (824 bytes, patch)
2016-01-11 15:41 UTC, Alberts Muktupāvels
committed Details | Review
selector: avoid warnings from GtkStyleContext (1.47 KB, patch)
2016-01-11 15:41 UTC, Alberts Muktupāvels
committed Details | Review
tasklist: avoid warnings from GtkStyleContext (2.64 KB, patch)
2016-01-11 15:41 UTC, Alberts Muktupāvels
committed Details | Review

Description Alberts Muktupāvels 2016-01-11 15:40:28 UTC
.
Comment 1 Alberts Muktupāvels 2016-01-11 15:41:01 UTC
Created attachment 318753 [details] [review]
pager: use correct state flags
Comment 2 Alberts Muktupāvels 2016-01-11 15:41:23 UTC
Created attachment 318754 [details] [review]
selector: avoid warnings from GtkStyleContext
Comment 3 Alberts Muktupāvels 2016-01-11 15:41:34 UTC
Created attachment 318755 [details] [review]
tasklist: avoid warnings from GtkStyleContext
Comment 4 Marco Trevisan (Treviño) 2016-01-13 15:38:37 UTC
Review of attachment 318753 [details] [review]:

+1
Comment 5 Marco Trevisan (Treviño) 2016-01-13 15:38:51 UTC
Review of attachment 318754 [details] [review]:

+1
Comment 6 Marco Trevisan (Treviño) 2016-01-13 15:39:30 UTC
Review of attachment 318755 [details] [review]:

+1