pager: use correct state flags

https://bugzilla.gnome.org/show_bug.cgi?id=760472